Review of ClientTest
Closes #48191

Signed-off-by: Jimmy Chakkalakal <jimmy.chakkalakal@ibm.com>